<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_paddy2"
    tools:context=".Activity.SignUp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>

    <TextView
        android:layout_margin="20dp"
        android:textColor="#000"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/newaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:id="@+id/signUpFullName"
        android:hint="@string/fullname"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/signUpEmail"
        android:hint="@string/email"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/signUpPassword"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:id="@+id/textViewSignUp"
        android:textColor="#fff"
        android:background="@drawable/button_ripple"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>


</LinearLayout>