<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_paddy"
    tools:context=".Activity.ForgetPassword">


    <ProgressBar
        android:id="@+id/resetProgressBar"
        android:visibility="gone"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>

    <TextView
        android:layout_margin="20dp"
        android:textColor="#000"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/passwordreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>



    <EditText
        android:id="@+id/editTextPasswordReset"
        android:hint="@string/emailtoresetpassword"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:id="@+id/btnResetLink"
        android:textColor="#fff"
        android:background="@drawable/button_ripple"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/resetLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>